(executable
 (name tests)
 (modules test_seq test_view test_mc tests)
 (libraries mcavl alcotest))

(executable
 (name bench)
 (modules bench)
 (libraries mcavl domainslib unix))

(executable
 (name qc)
 (modules qc)
 (libraries
  mcavl
  qcheck
  qcheck-ounit
  qcheck-core
  qcheck-core.runner
  multicorecheck.stm)
 (preprocess
  (pps ppx_deriving.show)))
